@@ -21,6 +21,7 @@ package org.apache.tajo.json;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import org.apache.tajo.datum.Datum;
+import org.apache.tajo.datum.TimestampDatum;
 import org.apache.tajo.util.TUtil;
 
 import java.lang.reflect.Type;
@@ -35,6 +36,7 @@ public class CommonGsonHelper {
 	
 	private static Map<Type, GsonSerDerAdapter> registerAdapters() {
     Map<Type, GsonSerDerAdapter> adapters = TUtil.newHashMap();
+    adapters.put(TimestampDatum.class, new TimestampDatumAdapter());
     adapters.put(Datum.class, new DatumAdapter());
 
     return adapters;
