@@ -788,17 +788,15 @@
         <version>1.9.5-rc1</version>
         <scope>test</scope>
       </dependency>
-      <!--
-      <dependency>
-        <groupId>org.jboss.netty</groupId>
-        <artifactId>netty</artifactId>
-        <version>3.2.4.Final</version>
-      </dependency>
-      -->
       <dependency>
         <groupId>io.netty</groupId>
         <artifactId>netty</artifactId>
         <version>3.6.6.Final</version>
+      </dependency>
+      <dependency>
+        <groupId>joda-time</groupId>
+        <artifactId>joda-time</artifactId>
+        <version>2.3</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
